<?xml version="1.0"?>
<package>
  <name>ros_control_monitor</name>
  <version>0.1.0</version>
  <description>The ros_control_monitor package</description>

  <maintainer email="luca.marchionni@pal-robotics.com">Luca marchionni</maintainer>

  <license>Proprietary</license>

  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>controller_manager_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>

  <export>
  </export>
</package>
